src/styles/pages/blog.css
body.blog {
	main {
		--grid-columns: [full-width-start] 1fr [margin-start] 1rem [content-start] min(140ch, calc(100vi - 2rem))
			[content-end] 1rem [margin-end] 1fr [full-width-end];
		row-gap: 2rem;
	}

	article {
		display: grid;
		grid-template:
			"image . ." auto
			"image type type" auto
			"image title title" auto
			"image teaser teaser" 1fr
			"image date meta" auto
			"image . ." auto
			/ minmax(40%, 15em) auto 1fr;
		gap: 0.5rem 1.5rem;

		&:not(:has(> :is(img, picture))) {
			grid-template:
				"title" auto
				"teaser" auto
				"meta" auto
				"date" auto
				/ 1fr;
		}

		& > h2 {
			grid-area: title;
			margin: 0;
		}
		& > picture {
			display: contents;
		}
		& img {
			grid-area: image;
			inline-size: 100%;
			/* min-block-size: 80%; */
			block-size: auto;
			max-block-size: 100%;
			object-fit: cover;
			border-radius: 0.5rem;
		}
		& .type {
			grid-area: type;
			justify-self: start;
			align-self: end;
			padding-inline: 0.5em;
			padding-block: 0.5em;
			font-size: 0.875rem;
			font-weight: 500;
			line-height: 1;
			background: var(--color-highlight);
			border-radius: 0.25em;
			z-index: 1;
			/* biome-ignore lint/correctness/noUnknownProperty: progressive enhancement */
			@supports (corner-shape: squircle) {
				border-radius: 100vmax;
				/* biome-ignore lint/correctness/noUnknownProperty: progressive enhancement */
				corner-shape: squircle;
			}
		}
		& p:not(.reading-meta) {
			grid-area: teaser;
			margin: 0;
		}
		& .reading-meta {
			grid-area: meta;
			margin: 0;
			font-size: 0.875rem;
			color: var(--color-subtle-text);
		}
		& time {
			grid-area: date;
			font-size: 0.875rem;
			color: var(--color-subtle-text);
		}

		@container (width <= 50rem) {
			grid-template: unset;
			grid-template-columns: [image-start] 0.5em [title-start teaser-start meta-start type-start] 1fr [meta-end
					date-start] auto [date-end title-end teaser-end type-end] 0.5em [image-end];
			grid-template-rows: [image-start type-start] auto [image-end type-end meta-start date-start] auto [meta-end
					date-end title-start] auto [title-end teaser-start] auto [teaser-end] 0.5em;
			gap: 0.5rem 0;

			.type {
				justify-self: end;
				margin-block: 0.5em;
			}
		}
	}
}

/* individual blog pages */
body:is([class^="blog-"], [class^="talks-"]) {
	main {
		margin-block-start: 0;
	}
	article {
		grid-column: full-width;
		display: grid;
		grid-template-columns: subgrid;

		& > * {
			grid-column: content;
		}
		& h1,
		& .eyebrow {
			grid-column: title;
		}
		& .reading-meta {
			grid-column: title;
			margin-block: unset;
			font-size: 0.875rem;
			color: var(--color-subtle-text);
		}
		& h1 {
			/* TODO: replace through ident() when available - https://drafts.csswg.org/css-values-5/#funcdef-ident
			  In the meantime, set view-transition-name inline in template */

			&:has(+ .reading-meta) {
				margin-block-end: 0.25em;
			}
		}
		/* Treat an image following the h1 as the hero image */
		& h1 + p:has(img),
		& .table-of-contents + p:has(img) {
			grid-row: 1;
			grid-column: full-width;
			margin-block-start: 0;
			overflow: clip;

			& img {
				inline-size: 100%;
				block-size: auto;
				object-fit: cover;
				/* TODO: replace through ident() when available - https://drafts.csswg.org/css-values-5/#funcdef-ident
			  In the meantime, set view-transition-name inline in template */

				@supports (animation-timeline: view()) {
					animation: fadeOut 1ms linear both;
					animation-timeline: view();
					animation-range: exit 0% exit 100%;

					@media (prefers-reduced-motion: no-preference) {
						animation: fadeBack 1ms linear both;
						animation-timeline: view();
						animation-range: exit 0% exit 100%;
					}
				}
			}
		}
		& p:has(:is(img, picture):only-child) {
			text-align: center;
		}
		& > footer {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
			align-items: center;
			gap: 2rem;
			margin-block: 1em;
			font-size: 0.875rem;
			color: var(--color-subtle-text);

			> p {
				margin: unset;
				flex-grow: 100;
			}
		}
	}
	img {
		max-inline-size: 100%;
		block-size: auto;
		border-radius: 0.25rem;
	}
}

figure {
	margin-inline: unset;
	margin-block: 1rem 2rem;

	& > p:has(> :is(img, picture):only-child) {
		margin-block: unset;
	}
	& img {
		max-inline-size: 100%;
		block-size: auto;
		border-radius: 0.25rem;
	}
	& > figcaption {
		margin-top: 0.5rem;
		font-size: 0.875rem;
		color: var(--color-subtle-text);
		font-style: italic;
		text-align: center;
		text-wrap: balance;
	}
}

:not(pre) > code,
kbd {
	background-color: var(--color-subtle-bg);
	border-radius: 0.25rem;
	padding-inline: 0.25rem;
	padding-block: 0.25rem;
}

pre {
	border: 1px solid var(--color-subtle-bg);
	border-radius: 0.5rem;
	padding-inline: 1.5rem;
	padding-block: 1.5rem;
}

h2#update::before {
	content: "⟳"; /* Unicode symbol for update */
	content: "⟳" / "";
	margin-inline-end: 0.2em;
	font-size: 1.2em;
	color: var(--color-accent);
}

.sidenote {
	font-size: 0.875rem;
	color: var(--color-subtle-text);
	border-left: 2px solid var(--color-subtle-text);
	margin-block: 1.5rem;
	padding-inline-start: 1.5rem;
	padding-block: 0.5rem;

	& > :is(h2, h3) {
		margin-block-start: 0;
	}
}

dl {
	display: grid;
	grid-template-columns: auto 1fr;
	gap: 0.75rem 1rem;
	margin-trim: block;

	& dt {
		font-weight: 600;
	}

	& dd {
		margin: 0;
	}
}

figure > p:has(img + img),
figure > p:has(picture + picture) {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(min(20ch, 100%), 1fr));
	gap: 5ch;
	justify-content: space-evenly;

	& img {
		width: 100%;
		height: auto;
	}
}

iframe {
	border-radius: 0.25rem;
}

body:is([class^="blog-"], [class^="talks-"]) {
	aside {
		> h2 {
			border-block-start: 1px solid oklch(0.5 0 0);
			padding-block-start: 1em;
		}

		> a {
			padding: unset;
			margin-block-end: 2rem;
			background:
				radial-gradient(circle at 50% 250%, var(--color-subtle-bg), var(--color-bg)),
				linear-gradient(var(--color-subtle-bg), var(--color-bg));
			background-clip: padding-box, border-box;
			background-origin: padding-box, border-box;

			box-shadow:
				0 0.75rem 1rem -0.25rem oklch(from black l c h / 0.06),
				0 0.25rem 0.375rem -0.125rem oklch(from black l c h / 0.02);
		}

		article {
			display: grid;
			grid-template:
				"image . ." 0.5em
				"image title ." auto
				"image teaser ." auto
				"image meta ." auto
				"image . ." 0.5em
				/ 35ch 1fr 0.25em;
			gap: 1rem 1.5rem;

			& > h3 {
				grid-area: title;
				margin: 0;
				/* TODO: replace through ident() when available - https://drafts.csswg.org/css-values-5/#funcdef-ident
					In the meantime, set view-transition-name inline in template */
			}
			& > :is(picture, img) {
				grid-area: image;
			}
			& img {
				inline-size: 100%;
				block-size: 100%;
				max-block-size: 100%;
				object-fit: cover;
				border-start-start-radius: 0.5rem;
				border-end-start-radius: 0.5rem;
				/* TODO: replace through ident() when available - https://drafts.csswg.org/css-values-5/#funcdef-ident
					In the meantime, set view-transition-name inline in template */
			}
			& .type {
				display: none;
			}
			& p:not(.reading-meta) {
				grid-area: teaser;
				margin: 0;
			}
			& .reading-meta {
				grid-area: meta;
				margin: 0;
				font-size: 0.8125rem;
				color: var(--color-subtle-text);
			}
			& time {
				display: none;
			}

			@container (width <= 70ch) {
				grid-template:
					"image image image" auto
					". title ." auto
					". teaser ." auto
					". meta ." auto
					". . ." 0.5em
					/ 0.5em 1fr 0.5em;
			}
		}
	}
}

.share-button {
	&.hidden {
		display: none;
	}

	flex-grow: 1;
	padding-inline: 0.5em;
	padding-block: 0.25em;
	font-size: 1rem;
	cursor: pointer;

	& > svg {
		inline-size: auto;
		block-size: 1.2em;
		fill: currentcolor;
		vertical-align: sub;
	}
}

.markdown-alert {
	--color-alert: var(--color-subtle-text);
	padding-inline: 1rem;
	border-inline-start: 4px solid var(--color-alert);
	margin-block: 1rem 2rem;
	position: relative;
	border-radius: 0.25rem;
	background: var(--color-subtle-bg);

	&.markdown-alert-note {
		--color-alert: oklch(0.57 0.2 259.67);
	}
	&.markdown-alert-tip {
		--color-alert: oklch(0.55 0.15 146.25);
	}
	&.markdown-alert-important {
		--color-alert: oklch(0.58 0.21 295.57);
	}
	&.markdown-alert-warning {
		--color-alert: oklch(0.57 0.12 74.92);
	}
	&.markdown-alert-caution {
		--color-alert: oklch(0.59 0.2 26.79);
	}

	& .markdown-alert-title {
		display: flex;
		align-items: center;
		column-gap: 0.5rem;
		color: oklch(from var(--color-alert) calc(l + 0.1) c h);
		font-size: 1.125em;
		font-weight: 600;
		border-end-start-radius: 0.5rem;
		border-end-end-radius: 0.5rem;
	}
	& > :first-child {
		margin-block-start: 0.5rem;
	}
	& > :last-child {
		margin-block-end: 0.75rem;
	}
	& .octicon {
		fill: currentColor;
		position: absolute;
		inset-block-start: 0;
		inset-inline-start: 0;
		translate: -50% 0%;
		background-color: var(--color-subtle-bg);
		padding: 0.75em;
		border-end-end-radius: 50%;
		overflow: visible;
		border-radius: 50%;
		z-index: -1;
	}
}

.reactions {
	flex: 1 1 100%;
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;

	> div {
		display: flex;
		flex-wrap: wrap;
		row-gap: 0.5rem;
		align-items: center;
	}

	> header,
	> p {
		flex-basis: 100%;
	}
	> header {
		font-size: 1.5em;
	}
	> p {
		margin: unset;
	}
	#likes {
		color: oklch(0.7 0.25 30);
	}
	#boosts {
		color: oklch(0.7 0.4 357);
	}

	.count {
		display: inline-block;
		font-weight: 700;
		padding-inline: 0.5em;
		padding-block: 0.25em;
		border-radius: 100vmax;
		vertical-align: middle;
		line-height: 1;
		font-variant-numeric: tabular-nums;
	}
	.avatars {
		flex-basis: 100%;
		display: flex;
		flex-wrap: wrap;
		gap: 0.25em;

		> :is(a, img) {
			/* And just for performance */
			content-visibility: auto;
			contain-intrinsic-size: 3rem;
		}

		a,
		img {
			inline-size: 3rem;
			block-size: 3rem;
			overflow: hidden;
			border-radius: 50%;
		}

		a {
			outline-offset: 0;
		}

		img {
			object-fit: cover;
			box-shadow: 0 2px 6px 1px oklch(from var(--color-subtle-bg) l c h / 0.5);
			border: 1px solid oklch(from var(--color-subtle-bg) l c h / 0.5);
			animation: fadeIn 0.3s ease-out;

			@media (prefers-reduced-motion: no-preference) {
				animation: scaleIn 0.3s ease-out;
			}
		}
	}
}

/* Table */
table {
	border-collapse: separate; /* Required for padding to work */
	padding-block-end: 0.5rem;
	background-color: var(--color-subtle-bg);
	margin-block: 1.5em;
	border-radius: 0.25rem;
	border-spacing: 0;
}

thead {
	& th {
		padding-block: 0.75em;
		border-block-end: 2px solid var(--color-bg);
	}
}

tbody {
	padding-block-end: 1rem;
}

td {
	padding-inline: 1em;
	padding-block: 1em;
}

baseline-status {
	margin-block-end: 1.5rem;
}

